--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.18.2",
     "@headlessui/react": "^1.7.13",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
@@ -17,11 +18,16 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.221.0",
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "superjson": "1.9.1",
+    "tailwind-merge": "^1.12.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
