--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.18.2",
     "@headlessui/react": "^1.7.13",
     "@prisma/client": "^4.9.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
