--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.18.2",
     "@headlessui/react": "^1.7.13",
+    "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.9.0",
     "@radix-ui/react-label": "^2.0.2",
     "@tanstack/react-query": "^4.20.2",
@@ -25,11 +26,13 @@
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "superjson": "1.9.1",
     "tailwind-merge": "^1.12.0",
-    "zod": "^3.20.6"
+    "zod": "^3.20.6",
+    "zod-prisma-types": "^2.7.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.1",
