--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zod-prisma-types": "^2.7.1"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.2.2",
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.14.0",
     "@types/prettier": "^2.7.2",
@@ -49,6 +50,8 @@
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
+    "prisma-erd-generator": "^1.6.2",
+    "prisma-erd-generator-markdown": "^1.3.1",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.9.5"
   },
