--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.9.0",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -22,16 +25,19 @@
     "@trpc/server": "^10.9.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.221.0",
     "next": "^13.2.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "superjson": "1.9.1",
-    "tailwind-merge": "^1.12.0",
-    "zod": "^3.20.6",
+    "tailwind-merge": "^1.13.1",
+    "zod": "^3.21.4",
     "zod-prisma-types": "^2.7.1"
   },
   "devDependencies": {
@@ -53,6 +59,7 @@
     "prisma-erd-generator": "^1.6.2",
     "prisma-erd-generator-markdown": "^1.3.1",
     "tailwindcss": "^3.2.0",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
