--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "@/*": ["./src/*"]
+      // "@/*": ["./src/*"]
     }
   },
   "include": [
