--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@clerk/nextjs": "^4.18.2",
     "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^3.1.0",
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^5.3.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
@@ -30,8 +30,10 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "i": "^0.3.7",
     "lucide-react": "^0.221.0",
     "next": "^13.2.1",
+    "npm": "^10.1.0",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
