--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^4.20.2",
     "@tanstack/react-table": "^8.9.2",
     "@trpc/client": "^10.9.0",
@@ -26,7 +29,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "@uploadthing/react": "^4.1.3",
-    "class-variance-authority": "^0.6.0",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
@@ -41,8 +44,9 @@
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "recharts": "^2.8.0",
     "superjson": "1.9.1",
-    "tailwind-merge": "^1.13.1",
+    "tailwind-merge": "^1.14.0",
     "uploadthing": "^4.1.3",
     "zod": "^3.21.4",
     "zod-prisma-types": "^2.7.1"
@@ -62,11 +66,9 @@
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.9.0",
-    "prisma-erd-generator": "^1.6.2",
-    "prisma-erd-generator-markdown": "^1.3.1",
+    "prisma": "^5.3.1",
     "tailwindcss": "^3.2.0",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
