--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
@@ -48,8 +48,7 @@
     "superjson": "1.9.1",
     "tailwind-merge": "^1.14.0",
     "uploadthing": "^4.1.3",
-    "zod": "^3.21.4",
-    "zod-prisma-types": "^2.7.1"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.2.2",
