--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-icons": "^4.8.0",
     "recharts": "^2.8.0",
     "superjson": "1.9.1",
+    "svix": "^1.13.0",
     "tailwind-merge": "^1.14.0",
     "uploadthing": "^4.1.3",
     "zod": "^3.21.4"
