--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.18.2",
@@ -28,7 +29,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
-    "@uploadthing/react": "^4.1.3",
+ 
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
@@ -37,7 +38,6 @@
     "lucide-react": "^0.221.0",
     "next": "^13.2.1",
     "npm": "^10.1.0",
-    "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -48,7 +48,6 @@
     "superjson": "1.9.1",
     "svix": "^1.13.0",
     "tailwind-merge": "^1.14.0",
-    "uploadthing": "^4.1.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
