--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "^14.1.1",
     "npm": "^10.1.0",
     "react-day-picker": "^8.7.1",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
