--- a/package.json
+++ b/package.json
@@ -11,67 +11,72 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@clerk/nextjs": "4.29.3",
-    "@headlessui/react": "^1.7.13",
-    "@hookform/resolvers": "^3.1.0",
-    "@prisma/client": "^5.3.1",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@tanstack/react-query": "^4.20.2",
-    "@tanstack/react-table": "^8.9.2",
-    "@trpc/client": "^10.9.0",
-    "@trpc/next": "^10.9.0",
-    "@trpc/react-query": "^10.9.0",
-    "@trpc/server": "^10.9.0",
-    "@uploadthing/react": "^5.2.2",
-    "class-variance-authority": "^0.6.1",
-    "clsx": "^1.2.1",
-    "cmdk": "^0.2.0",
-    "date-fns": "^2.30.0",
+    "@clerk/nextjs": "^6.22.0",
+    "@headlessui/react": "^2.2.4",
+    "@hookform/resolvers": "^5.1.1",
+    "@prisma/client": "^6.9.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query-devtools": "^5",
+    "@tanstack/react-table": "^8.21.3",
+    "@trpc/client": "^11.4.1",
+    "@trpc/next": "^11.4.1",
+    "@trpc/react-query": "^11.4.1",
+    "@trpc/server": "^11.4.1",
+    "@uploadthing/react": "^7.3.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "i": "^0.3.7",
-    "lucide-react": "^0.221.0",
-    "next": "^14.1.1",
-    "npm": "^10.1.0",
-    "react-day-picker": "^8.7.1",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.44.3",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.8.0",
-    "recharts": "^2.8.0",
-    "superjson": "1.9.1",
-    "svix": "^1.13.0",
-    "tailwind-merge": "^1.14.0",
-    "uploadthing": "^5.3.3",
-    "zod": "^3.21.4"
+    "lucide-react": "^0.515.0",
+    "next": "^15.3.3",
+    "npm": "^11.4.2",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.7.0",
+    "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
+    "superjson": "2.2.2",
+    "svix": "^1.67.0",
+    "tailwind-merge": "^3.3.1",
+    "uploadthing": "^7.7.2",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.1",
-    "@types/node": "^18.19.3",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@eslint/js": "^9.29.0",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^24.0.1",
+    "@types/prettier": "^3.0.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/tailwindcss": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.34.0",
-    "eslint-config-next": "^13.2.1",
-    "postcss": "^8.4.32",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^5.3.1",
-    "tailwindcss": "^3.3.6",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.3",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
+    "postcss": "^8.5.5",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "prisma": "^6.9.0",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^4.9.5"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.6.0"
